--- a/ML/2_linear_reg_multivariate/2_linear_regression_multivariate.ipynb
+++ b/ML/2_linear_reg_multivariate/2_linear_regression_multivariate.ipynb
@@ -3,22 +3,28 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "<h2 style=\"color:green\" align=\"center\"> Machine Learning With Python: Linear Regression Multiple Variables</h2>"
+    "<h2 style=\"color:green\" align=\"center\"> Machine Learning con Python: Regresión lineal Variables múltiples</h2>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style=\"color:purple\">Sample problem of predicting home price in monroe, new jersey (USA)</h3>"
+    "<h3 style=\"color:purple\">Ejemplo de problema de predicción del precio de la vivienda en Monroe, Nueva Jersey (EE.UU.)\n",
+    "</h3>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below is the table containing home prices in monroe twp, NJ. Here price depends on **area (square feet), bed rooms and age of the home (in years)**. Given these prices we have to predict prices of new homes based on area, bed rooms and age."
+    "A continuación se muestra la tabla que contiene los precios de las viviendas en monroe twp, NJ. Aquí el precio depende de **área (pies cuadrados), dormitorios y edad de la casa (en años)**. Teniendo en cuenta estos precios tenemos que predecir los precios de las viviendas nuevas sobre la base de área, dormitorios y edad.."
    ]
   },
   {
@@ -32,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given these home prices find out price of a home that has,\n",
+    "Teniendo en cuenta estos precios de la vivienda, averigüe el precio de una vivienda que tenga,\n",
     "\n",
     "**3000 sqr ft area, 3 bedrooms, 40 year old**\n",
     "\n",
@@ -43,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use regression with multiple variables here. Price can be calculated using following equation,"
+    "Aquí utilizaremos la regresión con variables múltiples. El precio puede calcularse utilizando la siguiente ecuación,"
    ]
   },
   {
@@ -57,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here area, bedrooms, age are called independant variables or **features** whereas price is a dependant variable"
+    "La superficie, las habitaciones y la edad son variables independientes o **características**, mientras que el precio es una variable dependiente."
    ]
   },
   {
@@ -176,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Data Preprocessing: Fill NA values with median value of a column**"
+    "**Preprocesamiento de datos: Rellenar los valores NA con el valor mediano de una columna**"
    ]
   },
   {
@@ -201,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +294,7 @@
        "5  4100       6.0    8  810000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -308,11 +314,10 @@
     {
      "data": {
       "text/plain": [
-       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
-       "         normalize=False)"
+       "LinearRegression()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12",
    "language": "python",
    "name": "python3"
   },
@@ -490,7 +495,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "38cca0c38332a56087b24af0bc80247f4fced29cb4f7f437d91dc159adec9c4e"
+   }
   }
  },
  "nbformat": 4,
