--- a/ML/2_linear_reg_multivariate/2_linear_regression_multivariate.ipynb
+++ b/ML/2_linear_reg_multivariate/2_linear_regression_multivariate.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -317,14 +317,14 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "reg = linear_model.LinearRegression()\n",
-    "reg.fit(df.drop('price',axis='columns'),df.price)"
+    "reg.fit(df.drop('price',axis='columns'),df.price)\n"
    ]
   },
   {
@@ -373,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Find price of home with 3000 sqr ft area, 3 bedrooms, 40 year old**"
+    "**Encuentra el precio de una casa con 3000 sqr ft area, 3 bedrooms, 40 year old**"
    ]
   },
   {
@@ -422,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Find price of home with 2500 sqr ft area, 4 bedrooms,  5 year old**"
+    "**y otra casa con 2500 sqr ft area, 4 bedrooms,  5 year old**"
    ]
   },
   {
@@ -463,6 +463,16 @@
     "\n",
     "**12 yr experience, 10 test score, 10 interview score**\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
